--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,9 @@
   <!-- Custom CSS -->
   <link href="/assets/css/style.css" rel="stylesheet">
   <!-- You can change the theme colors from here -->
-  <link href="/assets/css/colors/default-dark.css" id="theme" rel="stylesheet">
+  <!-- href="/assets/css/colors/default.css" -->
+  <!-- Hemos quitado el href por defecto, ya que lo cargamos desde el local storage con el servicio Settings -->
+  <link id="theme" rel="stylesheet">
 </head>
 
 <body class="fix-header card-no-border fix-sidebar">
@@ -36,7 +38,7 @@
   <script src="assets/plugins/sticky-kit-master/dist/sticky-kit.min.js"></script>
   <script src="assets/plugins/sparkline/jquery.sparkline.min.js"></script>
   <!--Custom JavaScript -->
-  <script src="assets/js/custom.min.js"></script>
+  <script src="assets/js/custom.js"></script>
 </body>
 
 </html>
